Update "prework" in callout, 5.1, 5.2

--- a/modules/module-5.1.qmd
+++ b/modules/module-5.1.qmd
@@ -10,6 +10,7 @@ execute:
 ---
 
 :::{.callout-tip}
+## Prework
 - Get a [FRED API key](https://fred.stlouisfed.org/docs/api/api_key.html)
 - Install [fredr](https://cran.r-project.org/web/packages/fredr/vignettes/fredr.html) and read about its basic usage
 - Install [shiny](https://shiny.posit.co/) and read about the 
