--- a/index.qmd
+++ b/index.qmd
@@ -26,17 +26,7 @@ advdate <- function(day, week) {
 This page displays an outline of the topics, content, and assignments for the term. Each module starts on a Monday. There are no assignments due on Sundays.
 
 ::: column-screen-inset-right
-<table style="width:95%;">
-<colgroup>
-<col style="width: 11%" />
-<col style="width: 11%" />
-<col style="width: 11%" />
-<col style="width: 11%" />
-<col style="width: 11%" />
-<col style="width: 11%" />
-<col style="width: 11%" />
-<col style="width: 11%" />
-</colgroup>
+<table>
 <thead>
 <tr class="header">
 <th><p>Module</p></th>
@@ -45,6 +35,7 @@ This page displays an outline of the topics, content, and assignments for the te
 <th><p>Packages</p></th>
 <th><p>Functions</p></th>
 <th><p>Readings</p></th>
+<th><p>Reference</p></th>
 <th><p>Videos</p></th>
 <th><p>Assignments</p></th>
 </tr>
@@ -56,8 +47,9 @@ This page displays an outline of the topics, content, and assignments for the te
 <td><p>Read data from flat files into R</p></td>
 <td><p><code>readr</code></p></td>
 <td><p><code>read_csv()</code>, <code>glimpse()</code></p></td>
-<td><p>r4ds, <a href="https://r4ds.hadley.nz/data-import.html#introduction" title="r4ds, 8.1 &amp; 8.2">8.1 &amp; 8.2</a></p></td>
 <td></td>
+<td><p><a href="https://r4ds.hadley.nz/data-import.html#introduction" title="r4ds, 8.1 &amp; 8.2">📖</a></p></td>
+<td><p><a href="https://youtu.be/YLOaKB8dfF4" title="Download WB data">🖥️</a> <a href="https://youtu.be/XOGXn8IiHK8" title="Read data from .csv file">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="even">
@@ -66,8 +58,9 @@ This page displays an outline of the topics, content, and assignments for the te
 <td><p>Reshape data</p></td>
 <td><p><code>tidyr</code></p></td>
 <td><p><code>pivot_longer()</code></p></td>
-<td><p>r4ds, <a href="https://r4ds.hadley.nz/data-tidy.html" title="r4ds, 6.1 - 6.3">6.1 - 6.3</a></p></td>
 <td></td>
+<td><p><a href="https://r4ds.hadley.nz/data-tidy.html" title="r4ds, 6.1 &amp; 6.3">📖</a></p></td>
+<td><p><a href="https://youtu.be/ud36szsO9a4" title="Reshaping data">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -76,19 +69,21 @@ This page displays an outline of the topics, content, and assignments for the te
 <td><p>Clean data</p></td>
 <td><p><code>dplyr</code>, <code>janitor</code> , <code>readr</code></p></td>
 <td><p><code>mutate_at()</code>, <code>clean_names()</code> , <code>write_csv()</code></p></td>
-<td><p><a href="https://link.springer.com/article/10.1057/palgrave.ap.5500151" title="Norris">Norris</a></p></td>
+<td><p><a href="https://link.springer.com/article/10.1057/palgrave.ap.5500151" title="Norris">📖</a></p></td>
 <td></td>
+<td><p><a href="https://youtu.be/syG5cdmtXSo" title="Truncating strings, changing variable types">🖥️</a> <a href="https://youtu.be/M-uuPBdBCTw" title="Cleaning variable names">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="even">
 <td><p>1.2</p></td>
 <td><p><code>r advdate(thur,0)</code></p></td>
-<td><p>Download data from an API, filter observations, select and create variables</p></td>
+<td><p>Download and filter data, select and create variables</p></td>
 <td><p><code>wbstats</code>, <code>vdemdata</code>, <code>dplyr</code></p></td>
 <td><p><code>wbstats()</code>, <code>vdem</code>,</p>
 <p><code>filter()</code> , <code>select()</code>, <code>mutate()</code></p></td>
 <td></td>
 <td></td>
+<td><p><a href="https://youtu.be/cBRTP2imt_o" title="Download data from an API">🖥️</a> <a href="https://youtu.be/7CvYTeMP_PU" title="Filter(), select(), mutate()">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -97,8 +92,9 @@ This page displays an outline of the topics, content, and assignments for the te
 <td><p>Merge data frames</p></td>
 <td><p><code>countrycode</code>, <code>dplyr</code></p></td>
 <td><p><code>country_code()</code>, <code>left_join()</code></p></td>
-<td><p>r4ds, <a href="https://r4ds.hadley.nz/joins.html#sec-mutating-joins" title="r4ds, 20.3">20.3</a></p></td>
 <td></td>
+<td><p><a href="https://r4ds.hadley.nz/joins.html#sec-mutating-joins" title="r4ds, 20.3">📖</a></p></td>
+<td><p><a href="https://youtu.be/ZGD0kO_iwAM" title="Add country codes to a data frame">🖥️</a> <a href="https://youtu.be/wNF3ZPneHWw" title="Merge two data frames">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="even">
@@ -107,248 +103,273 @@ This page displays an outline of the topics, content, and assignments for the te
 <td><p>Group, summarize and arrange data</p></td>
 <td><p><code>dplyr</code></p></td>
 <td><p><code>group_by()</code>, <code>summarize()</code>, <code>arrange()</code></p></td>
-<td><p>r4ds, <a href="https://r4ds.hadley.nz/data-transform.html#groups" title="r4ds, 4.5">4.5</a></p></td>
 <td></td>
+<td><p><a href="https://r4ds.hadley.nz/data-transform.html#groups" title="r4ds, 4.5">📖</a></p></td>
+<td><p><a href="https://youtu.be/2nX9p6arQjg" title="Group, summarize and arrange">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="odd">
 <td><p>2.1</p></td>
 <td><p><code>r advdate(mon,1)</code></p></td>
-<td><p>The grammar of graphics and <code>ggplot2</code></p></td>
-<td><p>Basics of <code>ggplot2</code> syntax</p></td>
+<td><p>Bar charts and histograms</p></td>
 <td></td>
 <td></td>
 <td></td>
+<td></td>
+<td><p><a href="https://youtu.be/hl02sVTyCRA" title="Bar charts">🖥️</a> <a href="https://youtu.be/LuNDAIQXx9w" title="Histograms">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="even">
 <td></td>
 <td><p><code>r advdate(tues, 1)</code></p></td>
-<td><p>Bar charts and line charts</p></td>
-<td><p>Create bar charts, line charts and shaded area charts</p></td>
+<td><p>Line charts</p></td>
 <td></td>
 <td></td>
 <td></td>
+<td></td>
+<td><p><a href="https://youtu.be/cHos9y261SQ" title="Line charts">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="odd">
 <td></td>
 <td><p><code>r advdate(wed, 1)</code></p></td>
-<td><p>Scatter plots and linear models</p></td>
-<td><p>Group points using shapes or colors; add fitted lines to data</p></td>
+<td><p>Scatter plots</p></td>
 <td></td>
 <td></td>
+<td><p><a href="https://www-jstor-org.proxygw.wrlc.org/stable/1951731?seq=8" title="Lipset">📖</a></p></td>
 <td></td>
+<td><p><a href="https://youtu.be/Cvme3C268wE" title="Scatter plots">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="even">
 <td><p>2.2</p></td>
 <td><p><code>r advdate(thur, 1)</code></p></td>
-<td><p>Themes and annotations</p></td>
-<td><p>Add text, labels, annotations and lines to your graphs</p></td>
+<td><p>Color schemes</p></td>
 <td></td>
 <td></td>
 <td></td>
+<td></td>
+<td><p><a href="https://youtu.be/fBCtSjg_-Ik" title="Color schemes">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="odd">
 <td></td>
 <td><p><code>r advdate(fri, 1)</code></p></td>
-<td><p>Interactivity</p></td>
-<td><p>Make visualizations interactive with <code>plotly</code></p></td>
+<td><p>Add themes and annotations</p></td>
 <td></td>
 <td></td>
 <td></td>
+<td></td>
+<td><p><a href="https://youtu.be/Le0OJXdsy3o" title="Themes">🖥️</a> <a href="https://youtu.be/uEpBMgWilXc" title="Annotations">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="even">
 <td></td>
 <td><p><code>r advdate(sat, 1)</code></p></td>
-<td><p>Clarity and accessibility</p></td>
-<td><p>Make sure everyone can read your graphs</p></td>
+<td><p>Make an interactive plot</p></td>
 <td></td>
 <td></td>
 <td></td>
+<td></td>
+<td><p><a href="https://youtu.be/T-7jtbcwaJ0" title="Interactivity">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="odd">
 <td><p>3.1</p></td>
 <td><p><code>r advdate(mon, 2)</code></p></td>
-<td><p>World Bank databases</p></td>
-<td><p>Download World Bank with <code>wbstats</code></p></td>
+<td><p>Choropleth map</p></td>
+<td><p><code>rnaturalearth</code></p></td>
 <td></td>
 <td></td>
 <td></td>
+<td><p><a href="https://youtu.be/HB3PMF93hzs" title="Using rnaturalearth">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="even">
 <td></td>
 <td><p><code>r advdate(tues, 2)</code></p></td>
-<td><p>Create a world map</p></td>
-<td><p>Basics of <code>sf</code> and <code>rnaturalearth packages</code></p></td>
+<td><p>Map data</p></td>
 <td></td>
 <td></td>
 <td></td>
+<td></td>
+<td><p><a href="https://youtu.be/5RnnGov3Iw4" title="Mapping data with rnaturalearth">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="odd">
 <td></td>
 <td><p><code>r advdate(wed, 2)</code></p></td>
-<td><p>Mapping data</p></td>
-<td><p>Join WB data to polygons and map</p></td>
-<td><p>Something related to ethics here?</p></td>
+<td><p>Make a map function</p></td>
 <td></td>
 <td></td>
+<td><p><a href="https://www-jstor-org.proxygw.wrlc.org/stable/j.ctt7s3wz.10" title="Ross, Chapter 3">📖</a></p></td>
+<td></td>
+<td><p><a href="https://youtu.be/m42vrbEEHT4" title="Making a map function">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="even">
 <td><p>3.2</p></td>
 <td><p><code>r advdate(thur, 2)</code></p></td>
-<td><p>The <code>leaflet</code> package</p></td>
-<td><p>Make an OpenStreetMap with markers or popups</p></td>
+<td><p>Upload UCDP data</p></td>
 <td></td>
 <td></td>
 <td></td>
+<td></td>
+<td><p><a href="https://youtu.be/If2PwFv90iI" title="Working with UCDP data">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="odd">
 <td></td>
 <td><p><code>r advdate(fri, 2)</code></p></td>
-<td><p>Map state-level data</p></td>
-<td><p>Create choropleth with <code>colorBin()</code> and <code>addPolygons()</code> functions</p></td>
+<td><p>Make a leaflet map</p></td>
 <td></td>
 <td></td>
 <td></td>
+<td></td>
+<td><p><a href="https://youtu.be/hHUPqgHRqYU" title="Make a leaflet map">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="even">
 <td></td>
 <td><p><code>r advdate(sat, 2)</code></p></td>
-<td><p>Map interactivity</p></td>
-<td><p>Add interactive labels to state choropleth</p></td>
+<td><p>Customize your map</p></td>
 <td></td>
 <td></td>
 <td></td>
+<td></td>
+<td><p><a href="https://youtu.be/qLYeSsoDvgs" title="Customize your leaflet map">🖥️</a></p></td>
 <td></td>
 </tr>
 <tr class="odd">
 <td><p>4.1</p></td>
 <td><p><code>r advdate(mon, 3)</code></p></td>
-<td><p>The <code>wid-r-tool</code> package</p></td>
-<td><p>Use the <code>download_wid()</code> function to download wealth/income shares</p></td>
+<td><p>Exploring tabular data</p></td>
+<td><p><code>tidycensus</code>, <code>kableExtra</code></p></td>
 <td></td>
 <td></td>
 <td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="even">
 <td></td>
 <td><p><code>r advdate(tues, 3)</code></p></td>
-<td><p>Reshaping data I</p></td>
-<td><p>Transform data to wide format with <code>pivot_wider()</code></p></td>
+<td><p>Make a <code>gt</code> table</p></td>
+<td><p><code>gt</code></p></td>
 <td></td>
 <td></td>
 <td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="odd">
 <td></td>
 <td><p><code>r advdate(wed, 3)</code></p></td>
-<td><p>Reshaping data II</p></td>
-<td><p>Transform data to long format with <code>pivot_longer()</code></p></td>
+<td><p>Plot confidence intervals</p></td>
 <td></td>
 <td></td>
+<td><p><a href="https://www.jstor.org/stable/3118222" title="Fearon &amp; Laitin">📖</a></p></td>
 <td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="even">
 <td><p>4.2</p></td>
 <td><p><code>r advdate(thur, 3)</code></p></td>
-<td><p>The grammar of tables</p></td>
+<td><p>Display regression tables</p></td>
+<td><p><code>broom</code></p></td>
 <td></td>
 <td></td>
 <td></td>
-<td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="odd">
 <td></td>
 <td><p><code>r advdate(fri, 3)</code></p></td>
-<td><p>Make a table of income shares</p></td>
-<td><p>Format data with <code>fmt_percent()</code></p></td>
+<td><p>Make regression tables</p></td>
+<td><p><code>modelsummary</code></p></td>
 <td></td>
 <td></td>
 <td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="even">
 <td></td>
 <td><p><code>r advdate(sat, 3)</code></p></td>
-<td><p>Modify parts of table</p></td>
+<td><p>Coefficient plots</p></td>
+<td></td>
+<td><p>`</p></td>
 <td></td>
 <td></td>
-<td></td>
-<td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="odd">
 <td><p>5.1</p></td>
 <td><p><code>r advdate(mon, 4)</code></p></td>
-<td><p>What is a Shiny app?</p></td>
 <td></td>
 <td></td>
 <td></td>
 <td></td>
+<td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="even">
 <td></td>
 <td><p><code>r advdate(tues, 4)</code></p></td>
-<td><p>The <code>ui</code> and <code>server</code> objects</p></td>
 <td></td>
 <td></td>
 <td></td>
 <td></td>
+<td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="odd">
 <td></td>
 <td><p><code>r advdate(wed, 4)</code></p></td>
-<td><p>Your first Shiny app</p></td>
 <td></td>
 <td></td>
 <td></td>
+<td><p><a href="https://muse-jhu-edu.proxygw.wrlc.org/article/225602" title="Huntington">📖</a></p></td>
 <td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="even">
 <td><p>5.2</p></td>
 <td><p><code>r advdate(thur, 4)</code></p></td>
-<td><p>The <code>fredr</code> package</p></td>
 <td></td>
 <td></td>
 <td></td>
 <td></td>
+<td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="odd">
 <td></td>
 <td><p><code>r advdate(fri, 4)</code></p></td>
-<td><p>Indicator graphing app, Part I</p></td>
 <td></td>
 <td></td>
 <td></td>
 <td></td>
+<td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="even">
 <td></td>
 <td><p><code>r advdate(sat, 4)</code></p></td>
-<td><p>Indicator graphing app, Part II</p></td>
 <td></td>
 <td></td>
 <td></td>
 <td></td>
+<td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -359,6 +380,7 @@ This page displays an outline of the topics, content, and assignments for the te
 <td></td>
 <td></td>
 <td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="even">
@@ -369,6 +391,7 @@ This page displays an outline of the topics, content, and assignments for the te
 <td></td>
 <td></td>
 <td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -379,6 +402,7 @@ This page displays an outline of the topics, content, and assignments for the te
 <td></td>
 <td></td>
 <td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="even">
@@ -389,6 +413,7 @@ This page displays an outline of the topics, content, and assignments for the te
 <td></td>
 <td></td>
 <td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -399,6 +424,7 @@ This page displays an outline of the topics, content, and assignments for the te
 <td></td>
 <td></td>
 <td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 <tr class="even">
@@ -409,6 +435,7 @@ This page displays an outline of the topics, content, and assignments for the te
 <td></td>
 <td></td>
 <td></td>
+<td><p>🖥️</p></td>
 <td></td>
 </tr>
 </tbody>
