--- a/index.qmd
+++ b/index.qmd
@@ -23,8 +23,11 @@ advdate <- function(day, week) {
 }
 ```
 
-This page displays an outline of the topics, content, and assignments for the term. Each module starts on a Monday. There are no assignments due on Sundays.
+This page displays an outline of the topics, content, and assignments
+for the term. Each module starts on a Monday. There are no assignments
+due on Sundays.
 
+::: column-screen-inset-right
 | Module | Date                | Skills                       | Packages | Functions |                                      Readings                                       |                                  Reference                                  | Videos | Assignments |
 |:------:|--------|--------|--------|--------|:------:|:------:|--------|:------:|
 |  1.1   | `r advdate(mon,0)`  | Read data into R             |          |           |                                                                                     | [📖](https://r4ds.hadley.nz/data-import.html#introduction "r4ds 8.1 & 8.2") |        |             |
@@ -63,3 +66,4 @@ This page displays an outline of the topics, content, and assignments for the te
 |  6.2   | `r advdate(thur,5)` |                              |          |           |                                                                                     |                                                                             |        |             |
 |        | `r advdate(fri,5)`  |                              |          |           |                                                                                     |                                                                             |        |             |
 |        | `r advdate(sat,5)`  |                              |          |           |                                                                                     |                                                                             |        |             |
+:::
