--- a/modules/getting-started.qmd
+++ b/modules/getting-started.qmd
@@ -19,15 +19,15 @@ It is a good idea to periodically update R and RStudio. RStudio will prompt you 
 
 We are going to be using a number of R packages throughout the course. One essential set of packages are those that comprise the [Tidyverse](https://www.tidyverse.org/), but especially `readr`, `dplyr`, `ggplot2` and `tidyr`. You can install the entire Tidyverse collection of packages by typing `install.packages("tidyverse")` in your console. We will talk about these packages in detail as we go through the course, but have a look at this [basic description](https://www.tidyverse.org/packages/#import) now to gain some basic familiarity. 
 
-Another thing that you really want to do is to make sure that you have the native pipe operator (`|>`) enabled. In RStudio, go to **Tools**, **Global Options**, then go to **Code** and select "Use native pipe operator." 
+Another thing that you really want to do is to make sure that you have the native pipe operator (`|>`) enabled. In RStudio, go to Tools>Global Options, then go to Code and select "Use native pipe operator." 
 
-While you are here, you can also go to **Appearance** to select a different editor theme or to **Pane Layout** to change how the four panes in R Studio are organized. Next, familiarize yourself with how to expand and minimize the four windows. The most important window that I want to highlight here is the source window. This is where we are going to be working most of the time in this course. And if I tell you to send your source code, I mean to send the file that you are working on in this window. This could be a Quarto document, an R script or an `app.R` file for a Shiny app. 
+While you are here, you can also go to Appearance to select a different editor theme or to Pane Layout to change how the four panes in R Studio are organized. Next, familiarize yourself with how to expand and minimize the four windows. The most important window that I want to highlight here is the source window. This is where we are going to be working most of the time in this course. And if I tell you to send your source code, I mean to send the file that you are working on in this window. This could be a Quarto document, an R script or an `app.R` file for a Shiny app. 
 
-The next window is the **Console** and there we also see tabs for **Terminal** and **Background Jobs**. The console is where you can run R code one line at a time. The terminal and background jobs are relevant for more advanced users and we probably will not spend that much time talking about them in this course. 
+The next window is the Console and there we also see tabs for Terminal and Background Jobs. The console is where you can run R code one line at a time. The terminal and background jobs are relevant for more advanced users and we probably will not spend that much time talking about them in this course. 
 
-From there, the next pane we want to explore is **Environment**, **History**, etc. **Environment** tells us what files are currently available to us. The other important tab here is **Git** which will be where we push things to GitHub. You will be using this a lot in the course. 
+From there, the next pane we want to explore is Environment, History, etc. Environment tells us what files are currently available to us. The other important tab here is Git which will be where we push things to GitHub. You will be using this a lot in the course. 
 
-Finally, we see a pane with **Files**, **Plots**, **Packages** etc. **Files** tells us what files are in our project folder and enables us to copy, and delete files associated with our project. **Plots** is a window for viewing our visualizations. And **Packages** shows us what packages are available and loaded into our environment.  
+Finally, we see a pane with Files, Plots, Packages etc. Files tells us what files are in our project folder and enables us to copy, and delete files associated with our project. Plots is a window for viewing our visualizations. And Packages shows us what packages are available and loaded into our environment.  
 
 Before you move on to the next section, take some time to familiarize yourself with the various user-friendly buttons and shortcuts available to you like the drop down menu for the pane layout, a spell checker, a button for inserting a code chunk and other features that you can play around with. 
 
