--- a/modules/getting-started.qmd
+++ b/modules/getting-started.qmd
@@ -31,7 +31,7 @@ Before you move on to the next section, take some time to familiarize yourself w
 
 ## Quarto
 
-{{< video https://www.youtube.com/embed/wo9vZccmqwc title='Your First Quarto Document' >}}
+{{< video https://youtu.be/c654j7aQjcg title='Your First Quarto Document' >}}
 
 Once you have R, R Studio and Quarto installed, you are ready to start integrating text and code with [Quarto](https://quarto.org/). Quarto is an open source publishing platform that enables you to integrate text with code. If you have used [R Markdown](https://rmarkdown.rstudio.com/) before then Quarto will look familiar to you because Quarto is the next generation of R Markdown.
 
@@ -50,7 +50,7 @@ Now take a few minutes and try changing more of the code in the YAML header. You
 You may already have some experience writing in Markdown, which is a lightweight markup language that enables you to format plaintext files. If you have not used Markdown, or if your memory is hazy, don't worry: it is really easy to learn. Have a look at this Markdown [cheat sheet](https://www.markdownguide.org/cheat-sheet/) and try to familiarize yourself with its basic syntax. 
 Finally, take some time to get familiar with the [Guide](https://quarto.org/docs/guide/) and [Reference](https://quarto.org/docs/reference/) sections of the Quarto website. Then take a look at the [gallery](https://quarto.org/docs/gallery/) so that you can get an idea of the kinds of things you can produce with Quarto. 
 
-## GitHub
+## GitHub and GitHub Classroom
 
 {{< video https://www.youtube.com/embed/wo9vZccmqwc title='Getting Started With GitHub' >}}
 
@@ -65,10 +65,3 @@ The first thing you are going to want to do is to [register](https://happygitwit
 Next, you need to generate a personal access token [(PAT)](https://happygitwithr.com/https-pat.html) and set your credentials with the `gitcreds` package.
 
 Now, you can [create a GitHub repo](https://happygitwithr.com/rstudio-git-github.html) and clone it to your computer in RStudio. There a number of ways to clone a repo, but the recommended method for this course involves creating a new project in RStudio and selecting "Version Control" for the method (instead of "New Directory" as we did before). From there, select "Git", copy the URL from the green "Code" tab in the GitHub repo, and paste it into "Repository URL" field. Next, select the directory where you want the repository to be created and click "create project."
-
-## GitHub Classroom
-
-{{< video https://www.youtube.com/embed/wo9vZccmqwc title='Getting Started With GitHub' >}}
-
--   Give a brief overview of GitHub Classroom and how to use it.
--   Perhaps have students download a mock assignment to illustrate how it works.
