--- a/index.qmd
+++ b/index.qmd
@@ -28,42 +28,42 @@ for the term. Each module starts on a Monday. There are no assignments
 due on Sundays.
 
 ::: column-screen-inset-right
-| Module | Date                | Skills                       | Packages | Functions |                                      Readings                                       |                                  Reference                                  | Videos | Assignments |
+|                    Module                    | Date                | Skills                       | Packages                                  | Functions                                                                           |                                      Readings                                       |                                  Reference                                  | Videos                                                                                                                                       | Assignments |
 |:------:|--------|--------|--------|--------|:------:|:------:|--------|:------:|
-|  1.1   | `r advdate(mon,0)`  | Read data into R             |          |           |                                                                                     | [📖](https://r4ds.hadley.nz/data-import.html#introduction "r4ds 8.1 & 8.2") |        |             |
-|        | `r advdate(tues,0)` | Reshape data                 |          |           |                                                                                     |        [📖](https://r4ds.hadley.nz/data-tidy.html "r4ds 6.1 & 6.3")         |        |             |
-|        | `r advdate(wed,0)`  | Clean data                   |          |           |    [📖](https://link.springer.com/article/10.1057/palgrave.ap.5500151 "Norris")     |                                                                             |        |             |
-|  1.2   | `r advdate(thur,0)` | Download data from APIs      |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(fri,0)`  | Merge data frames            |          |           |                                                                                     |   [📖](https://r4ds.hadley.nz/joins.html#sec-mutating-joins "r4ds, 20.3")   |        |             |
-|        | `r advdate(sat,0)`  | Group, summarize and arrange |          |           |                                                                                     |     [📖](https://r4ds.hadley.nz/data-transform.html#groups "r4ds, 4.5")     |        |             |
-|  2.1   | `r advdate(mon,1)`  | Bar charts & histograms      |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(tues,1)` | Line charts                  |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(wed,1)`  | Scatter plots                |          |           |     [📖](https://www-jstor-org.proxygw.wrlc.org/stable/1951731?seq=8 "Lipset")      |                                                                             |        |             |
-|  2.2   | `r advdate(thur,1)` | Color schemes                |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(fri,1)`  | Themes & annotations         |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(sat,1)`  | Make an interactive plot     |          |           |                                                                                     |                                                                             |        |             |
-|  3.1   | `r advdate(mon,2)`  | Choropleth map               |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(tues,2)` | Map data                     |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(wed,2)`  | Make a map function          |          |           | [📖](https://www-jstor-org.proxygw.wrlc.org/stable/j.ctt7s3wz.10 "Ross, Chapter 3") |                                                                             |        |             |
-|  3.2   | `r advdate(thur,2)` | Upload UCDP data             |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(fri,2)`  | Make a leaflet map           |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(sat,2)`  | Customize your map           |          |           |                                                                                     |                                                                             |        |             |
-|  4.1   | `r advdate(mon,3)`  | Exploring tabular data       |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(tues,3)` | Make a `gt` table            |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(wed,3)`  | Plot confidence intervals    |          |           |            [📖](https://www.jstor.org/stable/3118222 "Fearon & Laitin")             |                                                                             |        |             |
-|  4.2   | `r advdate(thur,3)` | Display regression tables    |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(fri,3)`  | Make regression tables       |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(sat,3)`  | Coefficient plots            |          |           |                                                                                     |                                                                             |        |             |
-|  5.1   | `r advdate(mon,4)`  |                              |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(tues,4)` |                              |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(wed,4)`  |                              |          |           |       [📖](https://muse-jhu-edu.proxygw.wrlc.org/article/225602 "Huntington")       |                                                                             |        |             |
-|  5.2   | `r advdate(thur,4)` |                              |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(fri,4)`  |                              |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(sat,4)`  |                              |          |           |                                                                                     |                                                                             |        |             |
-|  6.1   | `r advdate(mon,5)`  |                              |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(tues,5)` |                              |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(wed,5)`  |                              |          |           |                                                                                     |                                                                             |        |             |
-|  6.2   | `r advdate(thur,5)` |                              |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(fri,5)`  |                              |          |           |                                                                                     |                                                                             |        |             |
-|        | `r advdate(sat,5)`  |                              |          |           |                                                                                     |                                                                             |        |             |
+| [1.1](/modules/module-1.1.html "Module 1.1") | `r advdate(mon,0)`  | Read data into R             | `readr`, `dplyr`                          | `read_csv()`, `glimpse()`                                                           |                                                                                     | [📖](https://r4ds.hadley.nz/data-import.html#introduction "r4ds 8.1 & 8.2") | [🖥️](https://youtu.be/YLOaKB8dfF4 "Downloading World Bank data")[🖥️](https://youtu.be/XOGXn8IiHK8 "Reading data from a flat file")           |             |
+|                                              | `r advdate(tues,0)` | Reshape data                 | `tidyr`                                   | `pivot_longer()`                                                                    |                                                                                     |        [📖](https://r4ds.hadley.nz/data-tidy.html "r4ds 6.1 & 6.3")         | [🖥️](https://youtu.be/ud36szsO9a4 "Reshaping data")                                                                                          |             |
+|                                              | `r advdate(wed,0)`  | Clean data                   | `dplyr`                                   | `mutate()`, `mutate_at()`, `substring()`                                            |    [📖](https://link.springer.com/article/10.1057/palgrave.ap.5500151 "Norris")     |                                                                             | [🖥️](https://youtu.be/syG5cdmtXSo "Truncating strings, changing variable types")[🖥️](https://youtu.be/M-uuPBdBCTw "Cleaning variable names") |     📘      |
+| [1.2](/modules/module-1.2.html "Module 1.2") | `r advdate(thur,0)` | Download data from an API    | `wbstats`, `vdemdata`, `dplyr`, `janitor` | `wb_data()`, `vdem`, `select_()`, `filter()`, `case_match()`, `round_to_fraction()` |                                                                                     |                                                                             | [🖥️](https://youtu.be/cBRTP2imt_o "Dowload data from the World Bank")[🖥️](https://youtu.be/7CvYTeMP_PU "Filter data and select variables")   |             |
+|                                              | `r advdate(fri,0)`  | Merge data frames            | `countrycode`, `dplyr` , `readr`          | `countrycode()`, `left_join()`, `write_csv()`                                       |                                                                                     |   [📖](https://r4ds.hadley.nz/joins.html#sec-mutating-joins "r4ds, 20.3")   | [🖥️](https://youtu.be/ZGD0kO_iwAM "Add country codes to data frame")[🖥️](https://youtu.be/wNF3ZPneHWw "Merge two data frames")               |             |
+|                                              | `r advdate(sat,0)`  | Group, summarize and arrange | `dplyr`                                   | `group_by()`, `summarize()`, `arrange()`                                            |                                                                                     |     [📖](https://r4ds.hadley.nz/data-transform.html#groups "r4ds, 4.5")     | [🖥️](https://youtu.be/2nX9p6arQjg "Group, summarize and arrange")                                                                            |    📘 🧮    |
+| [2.1](/modules/module-2.1.html "Module 2.1") | `r advdate(mon,1)`  | Bar charts & histograms      | `ggplot2`                                 | `ggplot()`, `geom_col()`, `geom_histogram()`, `aes()`, `labs()`                     |                                                                                     |                                                                             | [🖥️](https://youtu.be/hl02sVTyCRA "Bar charts")[🖥️](https://youtu.be/LuNDAIQXx9w "Histograms")                                               |             |
+|                                              | `r advdate(tues,1)` | Line charts                  | `ggplot2`                                 | `geom_line()`                                                                       |                                                                                     |                                                                             | [🖥️](https://youtu.be/cHos9y261SQ "Line charts")                                                                                             |             |
+|                                              | `r advdate(wed,1)`  | Scatter plots                | `ggplot2`, `scales`                       | `geom_point()`, `geom_smooth()`, `scale_x_log10(),` `label_number()`, `geom_text()` |     [📖](https://www-jstor-org.proxygw.wrlc.org/stable/1951731?seq=8 "Lipset")      |                                                                             | [🖥️](https://youtu.be/Cvme3C268wE "Scatter plots")                                                                                           |     📘      |
+| [2.2](/modules/module-2.2.html "Module 2.2") | `r advdate(thur,1)` | Color schemes                |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
+|                                              | `r advdate(fri,1)`  | Themes & annotations         |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
+|                                              | `r advdate(sat,1)`  | Make an interactive plot     |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |    📘 🧮    |
+| [3.1](/modules/module-3.1.html "Module 3.1") | `r advdate(mon,2)`  | Choropleth map               |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
+|                                              | `r advdate(tues,2)` | Map data                     |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
+|                                              | `r advdate(wed,2)`  | Make a map function          |                                           |                                                                                     | [📖](https://www-jstor-org.proxygw.wrlc.org/stable/j.ctt7s3wz.10 "Ross, Chapter 3") |                                                                             | 🖥️                                                                                                                                           |     📘      |
+| [3.2](/modules/module-3.1.html "Module 3.1") | `r advdate(thur,2)` | Upload UCDP data             |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
+|                                              | `r advdate(fri,2)`  | Make a leaflet map           |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
+|                                              | `r advdate(sat,2)`  | Customize your map           |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |    📘 🧮    |
+| [4.1](/modules/module-4.1.html "Module 4.1") | `r advdate(mon,3)`  | Exploring tabular data       |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
+|                                              | `r advdate(tues,3)` | Make a `gt` table            |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
+|                                              | `r advdate(wed,3)`  | Plot confidence intervals    |                                           |                                                                                     |            [📖](https://www.jstor.org/stable/3118222 "Fearon & Laitin")             |                                                                             | 🖥️                                                                                                                                           |     📘      |
+| [4.2](/modules/module-4.2.html "Module 4.2") | `r advdate(thur,3)` | Display regression tables    |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
+|                                              | `r advdate(fri,3)`  | Make regression tables       |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |     ✍️      |
+|                                              | `r advdate(sat,3)`  | Coefficient plots            |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |    📘 🧮    |
+| [5.1](/modules/module-5.1.html "Module 5.1") | `r advdate(mon,4)`  | Scatter plot app setup       |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
+|                                              | `r advdate(tues,4)` | Building the UI              |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
+|                                              | `r advdate(wed,4)`  | Building the server          |                                           |                                                                                     |       [📖](https://muse-jhu-edu.proxygw.wrlc.org/article/225602 "Huntington")       |                                                                             | 🖥️                                                                                                                                           |     📘      |
+|   [5.2](/modules/module-5.2 "Module 5.2")    | `r advdate(thur,4)` | Line chart app setup         |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
+|                                              | `r advdate(fri,4)`  | Building the UI              |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |     ✍️      |
+|                                              | `r advdate(sat,4)`  | Building the server          |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |    📘 🧮    |
+| [6.1](/modules/module-6.1.html "Module 6.1") | `r advdate(mon,5)`  |                              |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
+|                                              | `r advdate(tues,5)` |                              |                                           |                                                                                     |                                                                                     |                                                                             |                                                                                                                                              |             |
+|                                              | `r advdate(wed,5)`  |                              |                                           |                                                                                     |                                                                                     |                                                                             |                                                                                                                                              |             |
+| [6.2](/modules/module-6.2.html "Module 6.2") | `r advdate(thur,5)` |                              |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
+|                                              | `r advdate(fri,5)`  |                              |                                           |                                                                                     |                                                                                     |                                                                             |                                                                                                                                              |             |
+|                                              | `r advdate(sat,5)`  |                              |                                           |                                                                                     |                                                                                     |                                                                             |                                                                                                                                              |     ✍️      |
 :::
