--- a/index.qmd
+++ b/index.qmd
@@ -39,9 +39,9 @@ due on Sundays.
 | [2.1](/modules/module-2.1.html "Module 2.1") | `r advdate(mon,1)`  | Bar charts & histograms      | `ggplot2`                                 | `ggplot()`, `geom_col()`, `geom_histogram()`, `aes()`, `labs()`                     |                                                                                     |                                                                             | [🖥️](https://youtu.be/hl02sVTyCRA "Bar charts")[🖥️](https://youtu.be/LuNDAIQXx9w "Histograms")                                               |             |
 |                                              | `r advdate(tues,1)` | Line charts                  | `ggplot2`                                 | `geom_line()`                                                                       |                                                                                     |                                                                             | [🖥️](https://youtu.be/cHos9y261SQ "Line charts")                                                                                             |             |
 |                                              | `r advdate(wed,1)`  | Scatter plots                | `ggplot2`, `scales`                       | `geom_point()`, `geom_smooth()`, `scale_x_log10(),` `label_number()`, `geom_text()` |     [📖](https://www-jstor-org.proxygw.wrlc.org/stable/1951731?seq=8 "Lipset")      |                                                                             | [🖥️](https://youtu.be/Cvme3C268wE "Scatter plots")                                                                                           |     📘      |
-| [2.2](/modules/module-2.2.html "Module 2.2") | `r advdate(thur,1)` | Color schemes                |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
-|                                              | `r advdate(fri,1)`  | Themes & annotations         |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
-|                                              | `r advdate(sat,1)`  | Make an interactive plot     |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |    📘 🧮    |
+| [2.2](/modules/module-2.2.html "Module 2.2") | `r advdate(thur,1)` | Color schemes                |                                           |                                                                                     |                                                                                     |                                                                             | [🖥️](https://www.youtube.com/watch?v=fBCtSjg_-Ik&t=121s "Color schemes")                                                                     |             |
+|                                              | `r advdate(fri,1)`  | Themes & annotations         |                                           |                                                                                     |                                                                                     |                                                                             | [🖥️](https://www.youtube.com/watch?v=Le0OJXdsy3o&t=96s "Themes")[🖥️](https://www.youtube.com/watch?v=uEpBMgWilXc&t=27s "Annotations")        |             |
+|                                              | `r advdate(sat,1)`  | Make an interactive plot     |                                           |                                                                                     |                                                                                     |                                                                             | [🖥️](https://www.youtube.com/watch?v=T-7jtbcwaJ0&t=59s "Interactivity")                                                                      |    📘 🧮    |
 | [3.1](/modules/module-3.1.html "Module 3.1") | `r advdate(mon,2)`  | Choropleth map               |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
 |                                              | `r advdate(tues,2)` | Map data                     |                                           |                                                                                     |                                                                                     |                                                                             | 🖥️                                                                                                                                           |             |
 |                                              | `r advdate(wed,2)`  | Make a map function          |                                           |                                                                                     | [📖](https://www-jstor-org.proxygw.wrlc.org/stable/j.ctt7s3wz.10 "Ross, Chapter 3") |                                                                             | 🖥️                                                                                                                                           |     📘      |
